# cloud_hook

./: .gitignore  README.md  analysis_options.yaml  client_secret.json  firebase_config.json  pubspec.yaml
.github/workflows/: release.yaml
_packaging/flatpak/: .gitignore  app.cloud_hook.Strumok.yaml  app.cloud_hook.yaml  build-flatpak.sh
android/: build.gradle
android/app/: build.gradle
content_suppliers_api/: pubspec.yaml
content_suppliers_api/lib/: model.dart  model.g.dart
content_suppliers_dart/: README.md  pubspec.yaml
content_suppliers_dart/lib/: bundle.dart  utils.dart
content_suppliers_ffi/: .metadata  makefile  pubspec.yaml  schema.fbs
content_suppliers_ffi/example/: README.md  pubspec.yaml
content_suppliers_ffi/lib/: bridge.dart  bundle.dart  ffi_bridge.dart
content_suppliers_ffi/rust/: Cargo.toml  makefile
content_suppliers_ffi/rust/src/: lib.rs  schema_generated.rs  wire.rs
content_suppliers_ffi/rust/src/suppliers/: dummy.rs  mod.rs  models.rs
content_suppliers_ffi/rust/suppliers/: Cargo.toml
content_suppliers_ffi/rust/suppliers/src/: dummy.rs  lib.rs  models.rs
content_suppliers_ffi/test/: bundle_test.dart
content_suppliers_rust/: pubspec.yaml
content_suppliers_rust/exmaple/: pubspec.yaml
content_suppliers_rust/lib/: bundle.dart
content_suppliers_rust/rust/: Cargo.toml
lib/: app_database.dart  app_image_cache.dart  app_init_firebase.dart  app_localizations.dart  app_preferences.dart  app_secrets.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
test/: rc4_test.dart
windows/: CMakeLists.txt
(+327 files in other folders)
