[package]
name = "content_suppliers_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
suppliers = { path = "./suppliers" } 
tokio = { version = "1", features = ["rt-multi-thread"] }
flatbuffers = "24.3.25"
strum = "0.26"
strum_macros = "0.26"
lazy_static = "1.5.0"
